# geoquality

./: .gitattributes  .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: changelog.md  checks.md  ci.md  configuration.md  data-sources.md  development.md  index.md  plugins.md  quickstart.md  reporting.md
examples/: .pre-commit-config.yaml  geoqa.yml  make_sample_data.py
src/geoqa/: __init__.py  cli.py  config.py  datasource.py  engine.py  registry.py  result.py
src/geoqa/checks/: __init__.py  attributes.py  base.py  crs.py  duplicates.py  geometry.py  topology.py
src/geoqa/reporting/: __init__.py  console.py  geojson_report.py  html_report.py  json_report.py  junit.py
src/geoqa/reporting/templates/: report.html.j2
tests/: conftest.py  test_checks.py  test_checks_extra.py  test_cli.py  test_config.py  test_datasource.py  test_engine.py  test_phase1.py  test_phase4_integrations.py  test_postgis.py  test_registry.py  test_reporting.py  test_topology.py
