[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "geoqa"
version = "0.4.0"
description = "Data quality for geospatial data - Great Expectations for GIS. Validate geometry, CRS, topology, duplicates and attributes from a single YAML config."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "geoqa contributors" }]
keywords = ["gis", "geospatial", "data-quality", "validation", "geopandas", "shapely", "qa"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "geopandas>=0.14",
    "shapely>=2.0",
    "pyproj>=3.4",
    "pyogrio>=0.7",
    "pandas>=2.0",
    "numpy>=1.24",
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
postgis = [
    "sqlalchemy>=2.0",
    "geoalchemy2>=0.14",
    "psycopg[binary]>=3.1",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "sqlalchemy>=2.0",
]

[project.scripts]
geoqa = "geoqa.cli:app"

[project.urls]
Homepage = "https://github.com/sergiuandrian/geoquality"
Repository = "https://github.com/sergiuandrian/geoquality"

[tool.hatch.build.targets.wheel]
packages = ["src/geoqa"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: Typer's documented pattern is to call typer.Option() in defaults.
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B017"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=geoqa --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["geoqa"]
branch = true

[tool.mypy]
python_version = "3.10"
files = ["src/geoqa"]
ignore_missing_imports = true
warn_unused_ignores = false
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = false
